kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
#  annotations:
#    deployment.kubernetes.io/revision: "1"
#  creationTimestamp: "2020-11-21T11:57:22Z"
  generation: 1
  labels:
    app: team
  name: team
  namespace: default
#  resourceVersion: "12240"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/team
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: team
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: team
    spec:
      containers:
      - image: team:0.0.1-SNAPSHOT
        imagePullPolicy: IfNotPresent
        name: team
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
