kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: team
  name: team
  namespace: default
  selfLink: /api/v1/namespaces/default/services/team
spec:
  clusterIP: 10.103.185.125
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 31805
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: team
  sessionAffinity: None
  type: LoadBalancer
